# vertex-oai

./: .env.example  .gitignore  CLI.md  Cargo.toml  DAEMON.md  ENV.md  LICENSE  README.md  WINDOWS.md  build.rs
.github/: WORKFLOWS.md
.github/workflows/: release.yml
src/: main.rs  routes.rs  state.rs
src/gcp/: token.rs
src/handlers/: mod.rs
src/models/: mod.rs
