[package]
name = "vertex-oai"
version = "1.0.0"
edition = "2021"
authors = ["zhangyue <zhangyuegallentboy@gmail.com>"]
description = "A high-performance OpenAI-compatible gateway for Google Cloud Vertex AI, enabling seamless access to Gemini models using standard OpenAI SDKs"
license = "MIT"
repository = "https://github.com/Gallentboy/vertex-oai"
homepage = "https://github.com/Gallentboy/vertex-oai"
documentation = "https://github.com/Gallentboy/vertex-oai#readme"
readme = "README.md"
keywords = ["openai", "vertex-ai", "gemini", "api-gateway", "google-cloud"]
categories = ["web-programming", "api-bindings", "command-line-utilities"]
rust-version = "1.75"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json", 
    "stream", 
    "rustls-tls",
    "gzip",      # gzip 压缩
    "brotli",    # brotli 压缩
    "deflate",   # deflate 压缩
    "http2",     # HTTP/2 支持
] }
google-cloud-auth = "1.3.0"
lazy_static = "1.5.0"
moka = { version = "0.12", features = ["future"] }
chrono = "0.4.42"
serde_json = "1.0.146"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"

[build-dependencies]
chrono = "0.4"
gix = { version = "0.76.0", default-features = false, features = ["max-performance-safe"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

[profile.release]
opt-level = 3          # 最高优化级别
lto = true             # 启用链接时优化
codegen-units = 1      # 更好的优化,但编译较慢
strip = true           # 移除调试符号
panic = "abort"        # 减小二进制大小# The provided change "1.3.0".3.0" is syntactically incorrect for a TOML version string. Keeping the original valid version.